// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages chooseTimeRestrictions should render correctly with errors 1`] = `
<Component
  description="Choose time restrictions page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "2400 is not a valid input. Use 0000.",
        "id": "end-time-monday",
        "userInput": "2400",
      },
      Object {
        "errorMessage": "Time must be in 2400 format",
        "id": "end-time-tuesday",
        "userInput": "7pm",
      },
    ]
  }
  title="Choose time restrictions - Create Fares Data Service "
>
  <CsrfForm
    action="/api/chooseTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "2400 is not a valid input. Use 0000.",
            "id": "end-time-monday",
            "userInput": "2400",
          },
          Object {
            "errorMessage": "Time must be in 2400 format",
            "id": "end-time-tuesday",
            "userInput": "7pm",
          },
        ]
      }
    />
    <h1
      className="govuk-heading-l"
    >
      Tell us more about the time restrictions
    </h1>
    <span
      className="govuk-hint"
    >
      Enter the times at which your ticket(s) start and end, if applicable. If they are valid at all times, leave them blank. You can leave them all blank, if needed, but you cannot enter an end time without a start time.
    </span>
    <div
      className="govuk-inset-text"
      id="time-restrictions-hint"
    >
      Enter times in 24hr format. For example 0900 is 9am, 1730 is 5:30pm.
    </div>
    <TimeRestrictionsTable
      chosenDays={
        Array [
          "monday",
          "tuesday",
        ]
      }
      dayCounters={Array []}
      endTimeInputs={
        Array [
          Object {
            "day": "monday",
            "timeInput": "2400",
          },
          Object {
            "day": "tuesday",
            "timeInput": "7pm",
          },
        ]
      }
      errors={
        Array [
          Object {
            "errorMessage": "2400 is not a valid input. Use 0000.",
            "id": "end-time-monday",
            "userInput": "2400",
          },
          Object {
            "errorMessage": "Time must be in 2400 format",
            "id": "end-time-tuesday",
            "userInput": "7pm",
          },
        ]
      }
      startTimeInputs={
        Array [
          Object {
            "day": "monday",
            "timeInput": "0000",
          },
          Object {
            "day": "tuesday",
            "timeInput": "0900",
          },
        ]
      }
    />
    <label
      className="govuk-label"
      htmlFor="time-restrictions-name"
      id="save-time-restriction-label"
    >
      <i>
        Optional - if you want to save this time restriction for reuse on other products, provide a name below
      </i>
    </label>
    <FormElementWrapper
      errorClass="govuk-input--error"
      errorId="product-details-name"
      errors={
        Array [
          Object {
            "errorMessage": "2400 is not a valid input. Use 0000.",
            "id": "end-time-monday",
            "userInput": "2400",
          },
          Object {
            "errorMessage": "Time must be in 2400 format",
            "id": "end-time-tuesday",
            "userInput": "7pm",
          },
        ]
      }
    >
      <input
        className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
        id="time-restrictions-name"
        maxLength={50}
        name="timeRestrictionName"
        type="text"
      />
    </FormElementWrapper>
    <input
      className="govuk-button continue-button-placement"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages chooseTimeRestrictions should render correctly with no prior inputs 1`] = `
<Component
  description="Choose time restrictions page of the Create Fares Data Service"
  errors={Array []}
  title="Choose time restrictions - Create Fares Data Service "
>
  <CsrfForm
    action="/api/chooseTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
    >
      Tell us more about the time restrictions
    </h1>
    <span
      className="govuk-hint"
    >
      Enter the times at which your ticket(s) start and end, if applicable. If they are valid at all times, leave them blank. You can leave them all blank, if needed, but you cannot enter an end time without a start time.
    </span>
    <div
      className="govuk-inset-text"
      id="time-restrictions-hint"
    >
      Enter times in 24hr format. For example 0900 is 9am, 1730 is 5:30pm.
    </div>
    <TimeRestrictionsTable
      chosenDays={
        Array [
          "monday",
          "tuesday",
        ]
      }
      dayCounters={Array []}
      endTimeInputs={Array []}
      errors={Array []}
      startTimeInputs={Array []}
    />
    <label
      className="govuk-label"
      htmlFor="time-restrictions-name"
      id="save-time-restriction-label"
    >
      <i>
        Optional - if you want to save this time restriction for reuse on other products, provide a name below
      </i>
    </label>
    <FormElementWrapper
      errorClass="govuk-input--error"
      errorId="product-details-name"
      errors={Array []}
    >
      <input
        className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
        id="time-restrictions-name"
        maxLength={50}
        name="timeRestrictionName"
        type="text"
      />
    </FormElementWrapper>
    <input
      className="govuk-button continue-button-placement"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages chooseTimeRestrictions should render correctly with prior inputs  1`] = `
<Component
  description="Choose time restrictions page of the Create Fares Data Service"
  errors={Array []}
  title="Choose time restrictions - Create Fares Data Service "
>
  <CsrfForm
    action="/api/chooseTimeRestrictions"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <h1
      className="govuk-heading-l"
    >
      Tell us more about the time restrictions
    </h1>
    <span
      className="govuk-hint"
    >
      Enter the times at which your ticket(s) start and end, if applicable. If they are valid at all times, leave them blank. You can leave them all blank, if needed, but you cannot enter an end time without a start time.
    </span>
    <div
      className="govuk-inset-text"
      id="time-restrictions-hint"
    >
      Enter times in 24hr format. For example 0900 is 9am, 1730 is 5:30pm.
    </div>
    <TimeRestrictionsTable
      chosenDays={
        Array [
          "monday",
          "tuesday",
        ]
      }
      dayCounters={Array []}
      endTimeInputs={
        Array [
          Object {
            "day": "tuesday",
            "timeInput": "1900",
          },
        ]
      }
      errors={Array []}
      startTimeInputs={
        Array [
          Object {
            "day": "monday",
            "timeInput": "0900",
          },
        ]
      }
    />
    <label
      className="govuk-label"
      htmlFor="time-restrictions-name"
      id="save-time-restriction-label"
    >
      <i>
        Optional - if you want to save this time restriction for reuse on other products, provide a name below
      </i>
    </label>
    <FormElementWrapper
      errorClass="govuk-input--error"
      errorId="product-details-name"
      errors={Array []}
    >
      <input
        className="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
        id="time-restrictions-name"
        maxLength={50}
        name="timeRestrictionName"
        type="text"
      />
    </FormElementWrapper>
    <input
      className="govuk-button continue-button-placement"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
